--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <form action=''>
       <input type='text' name='login'></input>
       <input type='password' name='password'></input>
-      <input type='submit'>Save</input>
+      <input type='submit'></input>
     </form>
   </body>
 </html>
