--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <input type="checkbox" class="form-check-input" id="exampleCheck1">
     <label class="form-check-label" for="exampleCheck1">Check me out</label>
   </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="button" class="btn btn-success">Success</button>
     </form>
   </body>
 </html>
